fix(web): hide side nav scrollbar (#176)

--- a/service/vspo-schedule/web/src/styles/globals.css
+++ b/service/vspo-schedule/web/src/styles/globals.css
@@ -11,10 +11,6 @@ body {
   height: 100%;
 }
 
-body {
-  /* overflow-y: scroll !important; */
-}
-
 a {
   color: inherit;
   text-decoration: none;
